Fix navbar sizing on Safari

--- a/app/assets/stylesheets/navigation_bar.scss
+++ b/app/assets/stylesheets/navigation_bar.scss
@@ -4,7 +4,6 @@ nav {
   position: fixed;
 
   display: grid;
-  grid-auto-rows: 100%;
 
   height: var(--navigation-height);
   width: 100%;
